--- a/article.html
+++ b/article.html
@@ -21,7 +21,7 @@
     <header class="gird-header">
         <div class="header-fixed">
             <div class="header-inner">
-                <a href="javascript:void(0)" class="header-logo" id="logo">Mr.liu</a>
+                <a href="javascript:void(0)" class="header-logo" id="logo">ChanYu</a>
                 <nav class="nav" id="nav">
                     <ul>
                         <li><a href="index.html">首页</a></li>
@@ -440,7 +440,7 @@
                         <a href="javascript:void(0)" class="weixin"><i class="fa fa-weixin"></i></a>
                     </div>
                     <p class="mt05">
-                         Copyright &copy; 2019-2020 ZQ博客 All Rights Reserved V.3.1.3 Power by ZQ博客
+                         Copyright &copy; 2019-2021 微码路人博客 All Rights Reserved V.3.1.3 Power by 微码路人博客
                     </p>
                 </div>
             </div>
