--- a/read.html
+++ b/read.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width" />
-	<meta name="author" content="www.lzqcode.com" />
+	<meta name="author" content="www.vcode.wang" />
     <title>文章阅读</title>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="layui/css/layui.css" />
@@ -75,7 +75,7 @@
                                     </p>
                                     <p class="f-toe">
                                         本文网址：
-                                        <a href="#">http://www.lzqcode.com</a>
+                                        <a href="#">http://www.vcode.wang</a>
                                     </p>
                                 </div>
                                 <div id="aplayer" style="margin:5px 0"></div>
@@ -128,7 +128,7 @@
                         <a href="javascript:void(0)" class="weixin"><i class="fa fa-weixin"></i></a>
                     </div>
                     <p class="mt05">
-                       Copyright &copy; 2019-2020 ZQ博客 All Rights Reserved V.3.1.3 Power by ZQ博客
+                       Copyright &copy; 2019-2021 微码路人博客 All Rights Reserved V.3.1.3 Power by 微码路人博客
                     </p>
                 </div>
             </div>
