--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="article.html">博客</a></li>
             <li><a href="message.html">留言</a></li>
         </ul>
-        <div class="logo"><a>Mr.liu</a></div>
+        <div class="logo"><a>ChanYu</a></div>
     </div>
     <div class="section" id="section1">
         <div class="fp-tablecell">
