--- a/link.html
+++ b/link.html
@@ -21,7 +21,7 @@
     <header class="gird-header">
         <div class="header-fixed">
             <div class="header-inner">
-                <a href="javascript:void(0)" class="header-logo" id="logo">Mr.liu</a>
+                <a href="javascript:void(0)" class="header-logo" id="logo">微码路人</a>
                 <nav class="nav" id="nav">
                     <ul>
                         <li><a href="index.html">首页</a></li>
@@ -76,10 +76,10 @@
 		                </p>
 		                <p>
 		                    如需交换友链，可以在留言区留言<br>
-		                    名称：ZQ个人博客<br>
-		                    网址：http://lzqcode.com/<br>
+		                    名称：微码路人博客<br>
+		                    网址：http://www.vcode.wang/<br>
 		                    图标：image/admin_img.png<br>
-		                    描述：只要朝着一个方向努力，一切都会变得得心应手
+		                    描述：只要朝着一个正确的方向努力，一切都会变得美好！
 		                </p>
 		                <p>
 		                    申请提交后若无其它原因将在24小时内审核,如超过时间还未通过,请私信我.(各种额外因素)
@@ -89,37 +89,37 @@
 		        <ul class="link-list">
 	                <li>
 	                    <div class="pd-lr-10">
-	                        <a href="http://www.lzqcode.com" target="_blank">
+	                        <a href="http://www.vcode.wang" target="_blank">
 	                            <img src="image/admin_img.png">
-	                            <h3>ZQ个人博客</h3>
-	                            <p>只要朝着一个方向努力，一切都会变得得心应手</p>
+	                            <h3>微码路人博客</h3>
+	                            <p>只要朝着一个正确的方向努力，一切都会变得美好！</p>
 	                        </a>
 	                    </div>
 	                </li>
 	                <li>
 	                    <div class="pd-lr-10">
-	                        <a href="http://www.lzqcode.com" target="_blank">
+	                        <a href="http://www.vcode.wang" target="_blank">
 	                            <img src="image/admin_img.png">
-	                            <h3>ZQ个人博客</h3>
-	                            <p>只要朝着一个方向努力，一切都会变得得心应手</p>
+	                            <h3>微码路人博客</h3>
+	                            <p>只要朝着一个正确的方向努力，一切都会变得美好！</p>
 	                        </a>
 	                    </div>
 	                </li>
 	               <li>
 	                    <div class="pd-lr-10">
-	                        <a href="http://www.lzqcode.com" target="_blank">
+	                        <a href="http://www.vcode.wang" target="_blank">
 	                            <img src="image/admin_img.png">
-	                            <h3>ZQ个人博客</h3>
-	                            <p>只要朝着一个方向努力，一切都会变得得心应手</p>
+	                            <h3>微码路人博客</h3>
+	                            <p>只要朝着一个正确的方向努力，一切都会变得美好！</p>
 	                        </a>
 	                    </div>
 	                </li>
 	                 <li>
 	                    <div class="pd-lr-10">
-	                        <a href="http://www.lzqcode.com" target="_blank">
+	                        <a href="http://www.vcode.wang" target="_blank">
 	                            <img src="image/admin_img.png">
-	                            <h3>ZQ个人博客</h3>
-	                            <p>只要朝着一个方向努力，一切都会变得得心应手</p>
+	                            <h3>微码路人博客</h3>
+	                            <p>只要朝着一个正确的方向努力，一切都会变得美好！</p>
 	                        </a>
 	                    </div>
 	                </li>
@@ -133,12 +133,12 @@
                 <div class="info">
                     <div class="contact">
                         <a href="javascript:void(0)" class="github" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="https://wpa.qq.com/msgrd?v=3&uin=930054439&site=qq&menu=yes" class="qq" target="_blank" title="930054439"><i class="fa fa-qq"></i></a>
-                        <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=gbiysbG0tbWyuMHw8K-i7uw" class="email" target="_blank" title="930054439@qq.com"><i class="fa fa-envelope"></i></a>
+                        <a href="https://wpa.qq.com/msgrd?v=3&uin=893786133&site=qq&menu=yes" class="qq" target="_blank" title="893786133"><i class="fa fa-qq"></i></a>
+                        <a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=gbiysbG0tbWyuMHw8K-i7uw" class="email" target="_blank" title="893786133@qq.com"><i class="fa fa-envelope"></i></a>
                         <a href="javascript:void(0)" class="weixin"><i class="fa fa-weixin"></i></a>
                     </div>
                     <p class="mt05">
-                         Copyright &copy; 2019-2020 ZQ博客 All Rights Reserved V.3.1.3 Power by ZQ博客
+                         Copyright &copy; 2019-2021 微码路人博客 All Rights Reserved V.3.1.3 Power by 微码路人博客
                     </p>
                 </div>
             </div>
