--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <h1>博客分类</h1>
                             <p>
                                 只要朝着一个方向努力
-                                <br>一切都会变得得心应手
+                                <br>一切都会变得美好
                             </p>
                         </div>
                     </div>
