--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="page1">
                 <div class="nav wow zoomIn" data-wow-duration="2s">
                     <h1>微码路人-Blog</h1>
-                    <p>只要朝着一个方向努力，一切都会变得得心应手</p>
+                    <p>只要朝着一个方向努力，一切都会变得美好</p>
                     <a class="layui-btn layui-btn-normal" style="margin-top: 20px" href="article.html">Enter Blog</a>
                 </div>
                 <a class="next wow fadeInUp" data-wow-duration="2s" id="next"></a>
