--- a/link.html
+++ b/link.html
@@ -21,7 +21,7 @@
     <header class="gird-header">
         <div class="header-fixed">
             <div class="header-inner">
-                <a href="javascript:void(0)" class="header-logo" id="logo">微码路人</a>
+                <a href="javascript:void(0)" class="header-logo" id="logo">ChanYu</a>
                 <nav class="nav" id="nav">
                     <ul>
                         <li><a href="index.html">首页</a></li>
